# Sunder

./: .gitignore  Cargo.toml  FAQ.md  LICENSE  README.md
crates/sunder-aggregator/: Cargo.toml
crates/sunder-aggregator/src/: assembler.rs  handler.rs  lib.rs  main.rs
crates/sunder-cli/: Cargo.toml
crates/sunder-cli/src/: main.rs
crates/sunder-core/: Cargo.toml
crates/sunder-core/src/: audit.rs  error.rs  keystore.rs  lib.rs  signing.rs  types.rs
crates/sunder-node/: Cargo.toml
crates/sunder-node/src/: handler.rs  lib.rs  main.rs  node_signer.rs
docker/: Dockerfile.aggregator  Dockerfile.node  docker-compose.yml
scripts/: demo.sh  setup.sh
sdk/sunder-client/: Cargo.toml
sdk/sunder-client/src/: lib.rs
