[workspace]
resolver = "2"
members = [
    "crates/sunder-core",
    "crates/sunder-node",
    "crates/sunder-aggregator",
    "crates/sunder-cli",
    "sdk/sunder-client",
]
 
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
 